// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LogBox integrates with React and handles a fragment warning in LogBox: Log added to LogBox 1`] = `
Array [
  Object {
    "category": "Warning: Invalid prop \`﻿%s\` supplied to \`React.Fragment\`. React.Fragment can only have \`key\` and \`children\` props.",
    "componentStack": Array [
      Object {
        "content": "Fragment",
        "fileName": "ReactWarningFixtures.js",
        "location": Object {
          "column": -1,
          "row": 28,
        },
      },
    ],
    "level": "warn",
    "message": Object {
      "content": "Warning: Invalid prop \`invalid\` supplied to \`React.Fragment\`. React.Fragment can only have \`key\` and \`children\` props.",
      "substitutions": Array [
        Object {
          "length": 7,
          "offset": 23,
        },
      ],
    },
  },
]
`;

exports[`LogBox integrates with React and handles a fragment warning in LogBox: Log passed to console error 1`] = `
Array [
  "Warning: Invalid prop \`invalid\` supplied to \`React.Fragment\`. React.Fragment can only have \`key\` and \`children\` props.
    in Fragment (at ReactWarningFixtures.js:28)",
]
`;

exports[`LogBox integrates with React and handles a fragment warning in LogBox: Log sent from React 1`] = `
Array [
  "Warning: Invalid prop \`%s\` supplied to \`React.Fragment\`. React.Fragment can only have \`key\` and \`children\` props.%s",
  "invalid",
  "
    in Fragment (at ReactWarningFixtures.js:28)",
]
`;

exports[`LogBox integrates with React and handles a key error in LogBox: Log added to LogBox 1`] = `
Array [
  Object {
    "category": "Warning: Each child in a list should have a unique \\"key\\" prop.﻿%s﻿%s See https://fb.me/react-warning-keys for more information.",
    "componentStack": Array [
      Object {
        "content": "Text",
        "fileName": "ReactWarningFixtures.js",
        "location": Object {
          "column": -1,
          "row": 20,
        },
      },
    ],
    "level": "warn",
    "message": Object {
      "content": "Warning: Each child in a list should have a unique \\"key\\" prop. See https://fb.me/react-warning-keys for more information.",
      "substitutions": Array [
        Object {
          "length": 0,
          "offset": 62,
        },
        Object {
          "length": 0,
          "offset": 62,
        },
      ],
    },
  },
]
`;

exports[`LogBox integrates with React and handles a key error in LogBox: Log passed to console error 1`] = `
Array [
  "Warning: Each child in a list should have a unique \\"key\\" prop. See https://fb.me/react-warning-keys for more information.
    in Text (at ReactWarningFixtures.js:20)",
]
`;

exports[`LogBox integrates with React and handles a key error in LogBox: Log sent from React 1`] = `
Array [
  "Warning: Each child in a list should have a unique \\"key\\" prop.%s%s See https://fb.me/react-warning-keys for more information.%s",
  "",
  "",
  "
    in Text (at ReactWarningFixtures.js:20)",
]
`;
